--- a/index.html
+++ b/index.html
@@ -15,3 +15,22 @@
 </body>
 
 </html>
+
+<!DOCTYPE html>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<link rel="stylesheet" href="./style.css">
+<script type="text/javascript" src="./js/main.js" defer></script>
+<title>Github Api</title>
+
+</head>
+
+<body>
+    <h1>GitHub Repository Search</h1>
+    <input type="text" id="searchInput" placeholder="Inserisci nome repo">
+    <button id="searchBtn">Cerca</button>
+    <div id="results"></div>
+</body>
+
+</html>
