--- a/index.html
+++ b/index.html
@@ -1,20 +1,50 @@
-</html>
-
 <!DOCTYPE html>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="en">
 
-<link rel="stylesheet" href="./style.css">
-<script type="text/javascript" src="./js/main.js" defer></script>
-<title>Github Api</title>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="stylesheet" href="./style.css">
+    <title>GitHub API Search</title>
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <!-- font-awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <script type="text/javascript" src="./js/main.js" defer></script>
 </head>
 
 <body>
-    <h1>GitHub Repository Search</h1>
-    <input type="text" id="searchInput" placeholder="Inserisci nome repo">
-    <button id="searchBtn">Cerca</button>
-    <div id="results"></div>
+    <div class="container my-5">
+        <h1 class="text-center">GitHub API Search</h1>
+        <div class="row mb-4 justify-content-center">
+            <div class="col-6">
+                <input type="text" id="searchInput" class="form-control" placeholder="Enter search term">
+            </div>
+            <div class="col-auto">
+                <select id="searchType" class="form-select">
+                    <option value="repositories">Repositories</option>
+                    <option value="users">Users/Organizations</option>
+                </select>
+            </div>
+            <div class="col-auto">
+                <button id="searchBtn" class="btn btn-primary">Search</button>
+            </div>
+        </div>
+
+
+        <div id="results" class="row"></div>
+    </div>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
