--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>GitHub API Search</title>
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -38,7 +38,14 @@
         </div>
 
 
-        <div id="results" class="row"></div>
+        <div id="results"></div>
+
+        <!-- Loader Overlay -->
+        <div id="loader">
+            <div id="loader-container">
+                <p><i class="fa-solid fa-spinner fa-spin-pulse fa-5x"></i></p>
+            </div>
+        </div>
     </div>
 
     <!-- Bootstrap JS -->
