--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
 
 
         <div id="results"></div>
+        <!-- pagination -->
+        <nav aria-label="Page navigation example">
+            <ul class="pagination" id="pagination"></ul>
+        </nav>
 
         <!-- Loader Overlay -->
         <div id="loader">
